feat(support): implement RF09 get ticket
